[package]
edition = "2018"
authors = [
    "James Munns <james.munns@ferrous-systems.com>",
    "Daniel Egger <daniel@eggers-club.de>",
]
categories = ["embedded", "no-std"]
description = "Persist panic messages in the targets' RAM"
documentation = "https://docs.rs/panic-persist"
keywords = ["panic-handler", "panic-impl", "panic", "persist"]
license = "MIT OR Apache-2.0"
name = "panic-persist"
repository = "https://github.com/jamesmunns/panic-persist"
version = "0.2.1"
readme = "README.md"

[dependencies]
riscv = "0.6.0"
bl602-hal = { git="https://github.com/9names/bl602-hal.git", branch="serial_fifo_fmt" }


[features]
default = []
utf8 = []
custom-panic-handler = []

[package.metadata.docs.rs]
all-features = true
